-----------------------

NEW FEATURES
    o Added function "favorites" which takes a user and returns a list of
    their n most recent favorited tweets. Also added convenience method
    to the user class getFavorites()    

    o Added favoriteCount field to the status class, i.e. x$getFavoriteCount()

    o Added isRetweet field to the status class, i.e. x$getIsRetweet()

BUG FIXES

    o Fixed a bug where userTimeline would fail if given a single user
    object (as opposed to simple screen names, IDs, etc)

    o Fixed a bug in lookupUsers - if the user arg was NULL an error would
    be thrown. Now returns empty list

    o Fixed a bug in the assignment of latitude/longitude for tweets, these
    will now be properly populated
    
    o users$toDataFrame will now honor the stringsAsFactors argument

    o getFavoritesCount() will now work properly on users.


CHANGES IN VERSION 1.1.6 (2013-04-05)
------------------------

BUG FIXES

    o Fixed a bug in searchTwitter which would fill the tail end of a query
    with duplicated tweets if the user requested more than available
    
    o Changed showStatus to use character based input due to large IDs

CHANGES IN VERSION 1.1.5 (2013-03-26)
------------------------

NEW FEATURES

    - Changed 'blockOnRateLimit' (boolean) to 'retryOnRateLimit' (integer). If
     this value is supplied (to any of the twitteR API wrappers) the system
     will retry up to N times if Twitter's rate limit in effect. If the 
     retry limit is reached (even if it was 0) twitteR will now try to return
     any partial results that had been accumulated prior to the rate limit
     (with a warning)
   - Added function getTwitterOAuth(consumer_key, consumer_secret) which is a 
     wrapper around the ROAuth creation/handshaking process which embeds the
     Twitter URLs. Will also call registerTwitterOAuth for you and then return
     the OAuth credential so you can save it for future use if you wish.
 
USER VISIBLE CHANGES  